--- a/search-menu.html
+++ b/search-menu.html
@@ -48,7 +48,7 @@
 	</head>
 
 	<body>
-		<div class="wrappers">
+		<div class="wrapper">
 			<header class="header-search">
 				<iconify-icon
 					class="icon baseline-chevron-left"
