--- a/menu-scrolled.html
+++ b/menu-scrolled.html
@@ -287,7 +287,7 @@
 							<a href="#">
 								<iconify-icon
 									class="icon"
-									icon="ic:baseline-home"
+									icon="ic:baseline-menu-book"
 								></iconify-icon>
 								<span>Cardápio Digital</span>
 							</a>
@@ -296,7 +296,7 @@
 							<a href="#">
 								<iconify-icon
 									class="icon"
-									icon="ic:baseline-home"
+									icon="ic:outline-delivery-dining"
 								></iconify-icon>
 								<span>Cardápio Delivery</span>
 							</a>
@@ -305,7 +305,7 @@
 							<a href="#">
 								<iconify-icon
 									class="icon"
-									icon="ic:baseline-home"
+									icon="ic:baseline-hourglass-top"
 								></iconify-icon>
 								<span>Fila de Espera</span>
 							</a>
@@ -314,7 +314,7 @@
 							<a href="#">
 								<iconify-icon
 									class="icon"
-									icon="ic:baseline-home"
+									icon="ic:round-table-bar"
 								></iconify-icon>
 								<span>Pedir na mesa</span>
 							</a>
@@ -323,7 +323,7 @@
 							<a href="#">
 								<iconify-icon
 									class="icon"
-									icon="ic:baseline-home"
+									icon="ic:baseline-storefront"
 								></iconify-icon>
 								<span>Sobre</span>
 							</a>
