--- a/profile-password.html
+++ b/profile-password.html
@@ -62,7 +62,7 @@
 				</div>
 				<div class="header__nav" id="btn-menu">
 					<iconify-icon
-						class="right-icon baseline-more-vert"
+						class="right-icon icon baseline-more-vert"
 						icon="ic:baseline-more-vert"
 					></iconify-icon>
 				</div>
