correção de path 05-07-2023

--- a/menu.html
+++ b/menu.html
@@ -31,8 +31,8 @@
 		<meta property="og:site_name" content="TITULO" />
 		<meta property="fb:admins" content="1066108721" />
 
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/apps.css" />
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/apps.css" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script defer type="text/javascript" src="js/jquery.slick.js"></script>
@@ -143,28 +143,28 @@
 						<h1 class="title-section-h1">Promoção</h1>
 						<ul class="off__list">
 							<li class="list__item" id="btn-view-product">
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								<div class="item__description">
 									<p class="item__title">FEIJOADA COMPLETA INDIVIDUAL</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
 							</li>
 							<li class="list__item" id="btn-view-product">
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								<div class="item__description">
 									<p class="item__title">FEIJOADA COMPLETA INDIVIDUAL</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
 							</li>
 							<li class="list__item" id="btn-view-product">
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								<div class="item__description">
 									<p class="item__title">FEIJOADA COMPLETA INDIVIDUAL</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
 							</li>
 							<li class="list__item" id="btn-view-product">
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								<div class="item__description">
 									<p class="item__title">FEIJOADA COMPLETA INDIVIDUAL</p>
 									<p class="item__price">R$ 42,90</p>
@@ -189,7 +189,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 							<li class="list__item" id="btn-view-product">
@@ -202,7 +202,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 							<li class="list__item" id="btn-view-product">
@@ -215,7 +215,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 							<li class="list__item" id="btn-view-product">
@@ -228,7 +228,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 							<li class="list__item" id="btn-view-product">
@@ -241,7 +241,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 						</ul>
@@ -323,7 +323,7 @@
 				</button>
 
 				<div class="view-product__header">
-					<img src="/img/img-header-view.png" alt="" id="header-img" />
+					<img src=./img/img-header-view.png" alt="" id="header-img" />
 					<div class="view-product__description">
 						<div class="container">
 							<h2>HAMBURGUER BOVINO</h2>
