--- a/search-menu.html
+++ b/search-menu.html
@@ -31,8 +31,8 @@
 		<meta property="og:site_name" content="TITULO" />
 		<meta property="fb:admins" content="1066108721" />
 
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/apps.css" />
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/apps.css" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script defer type="text/javascript" src="js/jquery.slick.js"></script>
@@ -83,7 +83,7 @@
 									</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 							</a>
 						</li>
 						<li class="list__item">
@@ -96,7 +96,7 @@
 									</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 							</a>
 						</li>
 						<li class="list__item">
@@ -109,7 +109,7 @@
 									</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 							</a>
 						</li>
 						<li class="list__item">
@@ -122,7 +122,7 @@
 									</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 							</a>
 						</li>
 						<li class="list__item">
@@ -135,7 +135,7 @@
 									</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 							</a>
 						</li>
 					</ul>
