--- a/login.html
+++ b/login.html
@@ -31,8 +31,8 @@
 		<meta property="og:site_name" content="TITULO" />
 		<meta property="fb:admins" content="1066108721" />
 
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/apps.css" />
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/apps.css" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script defer type="text/javascript" src="js/jquery.slick.js"></script>
@@ -49,10 +49,10 @@
 
 	<body>
 		<div class="wrapper login">
-			<div class="bg-up"><img src="img/bg-login-up.png" alt="" /></div>
+			<div class="bg-up"><img src="./img/bg-login-up.png" alt="" /></div>
 			<div class="container">
 				<img
-					src="img/logos-vucafood-2.svg
+					src="./img/logos-vucafood-2.svg
 				"
 					alt="Logo do Vuca Food"
 				/>
@@ -77,7 +77,7 @@
 					<a href="#" class="btn btn-social celular"> Entrar com Celular </a>
 				</div>
 			</div>
-			<div class="bg-down"><img src="img/bg-login-down.png" alt="" /></div>
+			<div class="bg-down"><img src="./img/bg-login-down.png" alt="" /></div>
 		</div>
 	</body>
 </html>
