--- a/menu-scrolled.html
+++ b/menu-scrolled.html
@@ -31,8 +31,8 @@
 		<meta property="og:site_name" content="TITULO" />
 		<meta property="fb:admins" content="1066108721" />
 
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/apps.css" />
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/apps.css" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script defer type="text/javascript" src="js/jquery.slick.js"></script>
@@ -161,28 +161,28 @@
 						<h1 class="title-section-h1">Promoção</h1>
 						<ul class="off__list">
 							<li class="list__item">
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								<div class="item__description">
 									<p class="item__title">FEIJOADA COMPLETA INDIVIDUAL</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
 							</li>
 							<li class="list__item">
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								<div class="item__description">
 									<p class="item__title">FEIJOADA COMPLETA INDIVIDUAL</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
 							</li>
 							<li class="list__item">
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								<div class="item__description">
 									<p class="item__title">FEIJOADA COMPLETA INDIVIDUAL</p>
 									<p class="item__price">R$ 42,90</p>
 								</div>
 							</li>
 							<li class="list__item">
-								<img src="img/menu-item-img.png" alt="Imagem do prato" />
+								<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								<div class="item__description">
 									<p class="item__title">FEIJOADA COMPLETA INDIVIDUAL</p>
 									<p class="item__price">R$ 42,90</p>
@@ -207,7 +207,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 							<li class="list__item">
@@ -220,7 +220,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 							<li class="list__item">
@@ -233,7 +233,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 							<li class="list__item">
@@ -246,7 +246,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 							<li class="list__item">
@@ -259,7 +259,7 @@
 										</p>
 										<p class="item__price">R$ 42,90</p>
 									</div>
-									<img src="img/menu-item-img.png" alt="Imagem do prato" />
+									<img src="./img/menu-item-img.png" alt="Imagem do prato" />
 								</a>
 							</li>
 						</ul>
