--- a/payment-add-empty.html
+++ b/payment-add-empty.html
@@ -31,8 +31,8 @@
     <meta property="og:site_name" content="TITULO" />
     <meta property="fb:admins" content="1066108721" />
 
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/apps.css" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/apps.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script defer type="text/javascript" src="js/jquery.slick.js"></script>
@@ -72,7 +72,7 @@
         <div class="s-payment-add__cta">
           <div class="container">
             <div class="cta__illustration">
-             <img src="img/icon-payment-add.svg" alt="Ilustração colorida de cartões de crédito">
+             <img src="./img/icon-payment-add.svg" alt="Ilustração colorida de cartões de crédito">
               <a href="#" class="btn btn-primary rounded">Adicione um cartão</a>
             </div>
           </div>
