--- a/profile-my-orders-view.html
+++ b/profile-my-orders-view.html
@@ -31,8 +31,8 @@
 		<meta property="og:site_name" content="TITULO" />
 		<meta property="fb:admins" content="1066108721" />
 
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/apps.css" />
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/apps.css" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script defer type="text/javascript" src="js/jquery.slick.js"></script>
@@ -72,7 +72,7 @@
 				<div class="container">
 					<div class="orders__item margin-bottom-20">
 						<div class="orders__item__img">
-							<img src="img/logos-donna-maria.png" alt="logo do Restaurante" />
+							<img src="./img/logos-donna-maria.png" alt="logo do Restaurante" />
 						</div>
 						<div class="orders__item__details">
 							<h3>Buena Brasa</h3>
@@ -91,7 +91,7 @@
 					<ul class="orders-sumary__list">
 						<li class="orders-sumary__item">
 							<div class="sumary__item__img">
-								<img src="img/menu-item-img.png" alt="imagem do produto" />
+								<img src="./img/menu-item-img.png" alt="imagem do produto" />
 								<span class="quant-ornament">1</span>
 							</div>
 							<div class="sumary__item__details">
@@ -106,7 +106,7 @@
 						</li>
 						<li class="orders-sumary__item">
 							<div class="sumary__item__img">
-								<img src="img/menu-item-img.png" alt="imagem do produto" />
+								<img src="./img/menu-item-img.png" alt="imagem do produto" />
 								<span class="quant-ornament">1</span>
 							</div>
 							<div class="sumary__item__details">
