--- a/profile-my-orders.html
+++ b/profile-my-orders.html
@@ -31,8 +31,8 @@
 		<meta property="og:site_name" content="TITULO" />
 		<meta property="fb:admins" content="1066108721" />
 
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/apps.css" />
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/apps.css" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script defer type="text/javascript" src="js/jquery.slick.js"></script>
@@ -74,7 +74,7 @@
 						<li class="orders__item">
 							<div class="orders__item__img">
 								<img
-									src="img/logos-donna-maria.png"
+									src="./img/logos-donna-maria.png"
 									alt="logo do Restaurante"
 								/>
 							</div>
@@ -88,7 +88,7 @@
 						<li class="orders__item">
 							<div class="orders__item__img">
 								<img
-									src="img/logos-donna-maria.png"
+									src="./img/logos-donna-maria.png"
 									alt="logo do Restaurante"
 								/>
 							</div>
@@ -102,7 +102,7 @@
 						<li class="orders__item">
 							<div class="orders__item__img">
 								<img
-									src="img/logos-donna-maria.png"
+									src="./img/logos-donna-maria.png"
 									alt="logo do Restaurante"
 								/>
 							</div>
